feat(api): add project updates sort-by param
